tools/build/resources/ZeroCM/zcm/eventlog.h

/* Note: some language bindings depend on the specific memory layout
 *       of ZCM structures. If you change these, be sure to update
 *       language bindings to match. */

typedef struct _zcm_eventlog_event_t zcm_eventlog_event_t;
typedef struct _zcm_eventlog_t zcm_eventlog_t;
/**** Methods for creation/deletion ****/
zcm_eventlog_t* zcm_eventlog_create(const char* path, const char* mode);
void zcm_eventlog_destroy(zcm_eventlog_t* eventlog);
/**** Methods for read/write ****/
// NOTE: The returned zcm_eventlog_event_t must be freed by zcm_eventlog_free_event()
zcm_eventlog_event_t* zcm_eventlog_read_next_event(zcm_eventlog_t* eventlog);
zcm_eventlog_event_t* zcm_eventlog_read_prev_event(zcm_eventlog_t* eventlog);
zcm_eventlog_event_t* zcm_eventlog_read_event_at_offset(zcm_eventlog_t* eventlog, off_t offset);
void zcm_eventlog_free_event(zcm_eventlog_event_t* event);
int zcm_eventlog_write_event(zcm_eventlog_t* eventlog, const zcm_eventlog_event_t* event);